add register functionality
